force-app/main/default/objects/ConsultantHistory__c/ConsultantHistory__c.object-meta.xml
<CustomObject>
    <label>Consultant History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultant History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>