force-app/main/default/objects/ConsultantHistory__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Company/Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consultant Historys</relationshipLabel>
    <relationshipName>Consultant_Historys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>