force-app/main/default/objects/ConsultantHistory__c/fields/Consultant_ID__c.field-meta.xml
<CustomField>
    <fullName>Consultant_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant_ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>