force-app/main/default/objects/ConsultantHistory__c/fields/ConsultingFirm__c.field-meta.xml
<CustomField>
    <fullName>ConsultingFirm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consulting Firm</label>
    <type>TextArea</type>
</CustomField>