force-app/main/default/objects/ConsultantHistory__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>