force-app/main/default/objects/ConsultantHistory__c/fields/MailingGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>MailingGeoLocation__c</fullName>
    <label>Mailing Geo Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>